--- a/package.json
+++ b/package.json
@@ -8,18 +8,16 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "@swiper/core": "0.0.21",
     "customize-cra": "1.0.0",
-    "react": "18.0.0",
-    "react-app-rewired": "2.2.1",
-    "react-dom": "18.0.0",
+    "react": "17.0.2",
+    "react-app-rewired": "2.1.8",
+    "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.0",
-    "sass": "1.51.0",
+    "react-scripts": "4.0.3",
+    "sass": "1.41.0",
     "src": "1.1.2",
-    "styled-components": "5.3.5",
-    "swiper": "8.1.4",
-    "swiper-react": "1.0.0"
+    "styled-components": "5.3.1",
+    "swiper": "6.8.4"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
